<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back_1"

    tools:context=".SignUpActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_app_logo"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />



        <EditText
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/enter_user_name"
            android:textColorHint="#000000"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="#ffffff"
            android:drawableLeft="@drawable/ic_businessman"
            android:drawablePadding="14dp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="text"
            android:ems="10"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier2"
            />


        <EditText

            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:textColorHint="#000000"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="#ffffff"
            android:drawableLeft="@drawable/ic_locked"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/ic_locked"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/text_normal"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName"

            />


        <EditText
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/re_password"
            android:textColorHint="#000000"
            android:background="@drawable/edit_text_shape"
            android:backgroundTint="#ffffff"
            android:drawableLeft="@drawable/ic_locked"
            android:drawablePadding="14dp"
            android:drawableStart="@drawable/ic_locked"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/text_normal"
            android:inputType="textPassword"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"

    app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            />


    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
        />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="login_app_logo" />



</androidx.constraintlayout.widget.ConstraintLayout>